feat: complete exercise-service with data persistance operations
